[package]
name = "kvs"
version = "0.1.0"
authors = ["Andrew Kotov <ak@atuko.ru>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.2"

[lib]
test = false

[[bin]]
doctest = false
name = "kvs"

